fix: Node update

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,6 +31,8 @@ rspec:
     - cp config/database.yml.gitlab config/database.yml
     - RAILS_ENV=test bundle exec rails db:create db:schema:load
     - RAILS_ENV=test bundle exec rails db:migrate
+    - curl -sL https://deb.nodesource.com/setup_10.x | bash - \
+        && apt-get install -y nodejs
     - bundle exec rspec
   artifacts:
     paths:
