fix: install mini-racer

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,7 @@ stages:
 
 before_script:
   - ruby -v
+  - apt-get update -q && apt-get install nodejs -yqq
   - gem install bundler  --no-ri --no-rdoc
   - bundle install -j $(nproc) --path vendor
 
