--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,8 @@ Metrics/LineLength:
   Max: 150
 Metrics/BlockLength:
   Max: 150
+Metrics/MethodLength:
+  Max: 20
 Style/NumericLiterals:
   Enabled: false
 Style/Documentation:
