--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -24,4 +24,11 @@ Style/StderrPuts:
   Enabled: false
 Style/EmptyMethod:
   Enabled: false
-
+Metrics/AbcSize:
+  Max: 16
+Metrics/CyclomaticComplexity:
+  Max: 8
+Metrics/PerceivedComplexity:
+  Max: 8
+Style/GuardClause:
+  Enabled: false
