refactor: ステージング環境にベーシック認証をかける

--- a/config/database.yml
+++ b/config/database.yml
@@ -83,3 +83,8 @@ production:
   database: unlock_production
   username: unlock
   password: <%= ENV['UNLOCK_DATABASE_PASSWORD'] %>
+staging:
+  <<: *default
+  database: unlock_production
+  username: unlock
+  password: <%= ENV['UNLOCK_DATABASE_PASSWORD'] %>
