fix: pages のデプロイ修正

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,7 +56,7 @@ pages:
   dependencies:
     - rspec
   script:
-    - mv coverage/ public/
+    - mv coverage/* public/
   artifacts:
     paths:
       - public
